--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,8 +86,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Walk",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
 +ActionMappings=(ActionName="Walk",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightAlt)
 +ActionMappings=(ActionName="Punch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Right)
++ActionMappings=(ActionName="Kick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Left)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
